# swift-scribe-rs

./: .gitignore  Cargo.toml  Makefile  README.md  benchmark.sh  install_helper.sh
docs/: BENCHMARKING.md  LIBRARY_USAGE.md  NOTES.md  PROGRAMMATIC_AUDIO_API.md  SPEECHANALYZER_API_REFERENCE.md
examples/: batch.rs  programmatic_audio.rs  simple.rs  stream_mic.rs  system_audio.rs  system_audio_transcription.rs
helpers/: transcribe  transcribe.swift  transcribe_stream.swift
src/: bench.rs  lib.rs  main.rs
tests/: api_tests.rs
